[gd_scene load_steps=10 format=2]

[ext_resource path="res://textures/effects/other/glow.png" type="Texture" id=1]
[ext_resource path="res://minigames/minigame4/hero_ulti.gd" type="Script" id=2]
[ext_resource path="res://scripts/game/mobs/attack.gd" type="Script" id=3]
[ext_resource path="res://sounds/sfx/randomed/blast.tres" type="AudioStream" id=4]
[ext_resource path="res://minigames/minigame4/hero_ulti.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=4]
radius = 48.0

[sub_resource type="Animation" id=7]
resource_name = "blast"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("..:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 6, 6 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../detector/sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../detector/shape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("../sfx")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "fall"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../detector/sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("..:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -240 ), Vector2( 0, 240 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../detector/shape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 8.0

[node name="hero_sp" type="Node2D"]
script = ExtResource( 2 )

[node name="rockets_attack" type="Area2D" parent="."]
position = Vector2( 0, 1 )
collision_layer = 16
collision_mask = 21
script = ExtResource( 3 )
knockback = 2.0
defense_allowed = false
is_player_attack = true
lifetime = 0.0

[node name="rocket0" type="CollisionShape2D" parent="rockets_attack"]
position = Vector2( 0, 240 )
shape = SubResource( 4 )
disabled = true

[node name="sprite" type="Sprite" parent="rockets_attack/rocket0"]
modulate = Color( 0, 0, 1, 1 )
self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 6, 6 )
texture = ExtResource( 1 )

[node name="anim" type="AnimationPlayer" parent="rockets_attack/rocket0/sprite"]
autoplay = "fall"
anims/blast = SubResource( 7 )
anims/fall = SubResource( 8 )

[node name="detector" type="Area2D" parent="rockets_attack/rocket0"]
collision_layer = 8
collision_mask = 5

[node name="sprite" type="Sprite" parent="rockets_attack/rocket0/detector"]
self_modulate = Color( 0, 0, 1, 1 )
position = Vector2( 0, -8 )
texture = ExtResource( 5 )

[node name="shape" type="CollisionShape2D" parent="rockets_attack/rocket0/detector"]
shape = SubResource( 6 )

[node name="sfx" type="AudioStreamPlayer2D" parent="rockets_attack/rocket0"]
stream = ExtResource( 4 )
max_distance = 800.0
bus = "sfx"

[node name="despawn_timer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[connection signal="body_entered" from="rockets_attack/rocket0/detector" to="." method="rocket_exploded" binds= [ 0 ]]
[connection signal="timeout" from="despawn_timer" to="." method="queue_free"]
